# openvino

./: .gitignore
docs/template_plugin/src/: template_plugin.cpp  template_plugin.hpp
inference-engine/samples/benchmark_app/: main.cpp
inference-engine/samples/ngraph_memory_cell_injector/: CMakeLists.txt  main.cpp
inference-engine/samples/ngraph_model_generator/: CMakeLists.txt  conv2d_decomposition.cpp  conv2d_decomposition.hpp  main.cpp
inference-engine/src/cldnn_engine/: cldnn_infer_request.cpp
inference-engine/src/gna_plugin/: gna_graph_compiler.cpp  gna_graph_patterns.hpp  gna_plugin.cpp
inference-engine/src/low_precision_transformations/src/: convolution.cpp  weightable_layer_transformation.cpp
inference-engine/src/mkldnn_plugin/: mkldnn_graph.cpp
inference-engine/src/multi_device/: multi_device_async_infer_request.cpp  multi_device_exec_network.cpp  multi_device_exec_network.hpp  multi_device_infer_request.cpp  multi_device_infer_request.hpp
ngraph/core/src/op/: atan.cpp
ngraph/test/: CMakeLists.txt
samples/cpp/benchmark_app/: benchmark_app.hpp  main.cpp  remote_tensors_filling.cpp  remote_tensors_filling.hpp
src/inference/src/: ie_core.cpp
src/inference/src/dev/: core_impl.cpp  iplugin.cpp
src/inference/tests/unit/: core.cpp
src/plugins/auto/: auto_schedule.cpp  auto_schedule.hpp  base_schedule.cpp  base_schedule.hpp  executable_network.cpp  executable_network.hpp  infer_request.cpp  infer_request.hpp  multi_schedule.cpp  multi_schedule.hpp  plugin.cpp
src/plugins/auto/src/: auto_executable.cpp  auto_schedule.cpp  auto_schedule.hpp  (+2 more)
(+74 files in other folders)
